# Othello-Game

./: Board.cpp  CMakeLists.txt  LICENSE  PlayablePosition.h  Player.h  Position.h  README.md  UnplayablePosition.cpp
Othello/: Board.h  Game.cpp  Game.h  PlayablePosition.cpp  Player.cpp  Position.cpp  UnplayablePosition.h
